# simpledb-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: coverage.yaml  rust.yml
proto/: simpledb.proto
src/: block_id.rs  buffer.rs  client.rs  config.rs  create_student_db.rs  db.rs  errors.rs  file.rs  file_manager.rs  lib.rs  log.rs  page.rs  server.rs
src/driver/: embedded.rs  mod.rs  network.rs
src/driver/network/: connection.rs  driver.rs  metadata.rs  mod.rs  result_set.rs  statement.rs
src/index/: b_tree.rs  btree.rs  mod.rs
src/index/btree/: btree_directory.rs  btree_index.rs  btree_leaf.rs  btree_page.rs  mod.rs
src/index/plan/: index_join_plan.rs  index_select_plan.rs  index_update_planner.rs  mod.rs
src/index/scan/: index_join_scan.rs  (+2 more)
src/log/: log.rs  manager.rs  mod.rs  record.rs
src/materialization/: aggregation_function.rs  avg_function.rs  count_function.rs  group_by_plan.rs  group_by_scan.rs  materialize_plan.rs  max_function.rs  merge_join_plan.rs  merge_join_scan.rs  min_function.rs  mod.rs  record_comparator.rs  sort_plan.rs  sort_scan.rs  sum_function.rs  temp_table.rs
src/metadata/: index_manager.rs  mod.rs  stat_manager.rs  table_manager.rs
src/multibuffer/: buffer_needs.rs  chunk_scan.rs  mod.rs  multibuffer_product_plan.rs  multibuffer_product_scan.rs
src/parser/: ast.rs  expression.rs  grammar.lalrpop  grammar.rs  mod.rs  predicate.rs  statement.rs
src/plan/: basic_query_planner.rs  basic_update_planner.rs  extend_plan.rs  mod.rs  planner.rs  product_plan.rs  project_plan.rs  select_plan.rs  table_plan.rs
src/planner/: basic_query_planner.rs  basic_update_planner.rs  heuristic_query_planner.rs  index_update_planner.rs  mod.rs  table_planner.rs
src/proto/: simpledb.rs
src/record/: field.rs  layout.rs  mod.rs  record_page.rs  schema.rs  table_scan.rs
src/scan/: extend_scan.rs  mod.rs  product_scan.rs  project_scan.rs  select_scan.rs  table_scan.rs
src/tx/: concurrency.rs  mod.rs  recovery.rs  transaction.rs
