[package]
name = "simpledb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3"
anyhow = "1.0.91"
thiserror = "1.0.65"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
