[package]
name = "simpledb-rs"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "client"
path = "src/client.rs"


[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
tempfile = "3"
anyhow = "1.0.91"
thiserror = "1.0.65"
log = "0.4.22"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
