[package]
name = "simpledb-rs"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "client"
path = "src/client.rs"


[[bin]]
name = "server"
path = "src/server.rs"


[build-dependencies]
lalrpop = "0.22.0"
tonic-build = { version = "0.12.3", features = ["prost"] }

[dependencies]
anyhow = "1.0.91"
enum_dispatch = "0.3.13"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
log = "0.4.22"
prost = "0.13"
tempfile = "3"
thiserror = "1.0.65"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"
rustyline = "16.0.0"
colored = "3.0.0"

[dev-dependencies]
serial_test = "2.0.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
